--- a/USTD_Dev_all/templates/tables-editable.html
+++ b/USTD_Dev_all/templates/tables-editable.html
@@ -1,5 +1,4 @@
 {% load notifications_tags %}
-{% load notifications_tags %}
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
@@ -444,106 +443,113 @@
 <!-- App js -->
 <script src="/static/js/app.js"></script>
 <style type="text/css">
-    #a1:hover{
+    #a1:hover {
         color: red;
         background: transparent;
-        border-color: #bbb#fff#fff#aaa;
-    }   /*鼠标经过超链接的样式*/
-
-    #a1{/*完全清除超链接下划线效果*/
-        width: 50px;
-        font-size:20px;
-        text-decoration: none;
-        border:solid 1px;
-        color: #444;
-        background: burlywood;    /*超链接背景颜色*/
-        border-color: #fff#aaa#aaa#fff;
-        zoom: 1;      /*解决IE浏览器无法显示问题*/
+        border-color: #bbb #fff #fff #aaa;
     }
-    *{
-		        margin: 0px;
-		        padding: 0px;
-		        box-sizing: border-box;
-		    }
 
-		    .rg_layout{
-		        width: 900px;
-		        height: 500px;
-		        border: 8px solid #EEEEEE;
-		        background-color: white;
-		        /*让div水平居中*/
-		        margin: auto;
-		    }
+    /*鼠标经过超链接的样式*/
 
-		    .rg_left{
-		        /*border: 1px solid red;*/
-		        float: left;
-		        margin: 15px;
-		    }
-		    .rg_left > p:first-child{
-		        color:#FFD026;
-		        font-size: 20px;
-		    }
+    #a1 { /*完全清除超链接下划线效果*/
+        width: 50px;
+        font-size: 20px;
+        text-decoration: none;
+        border: solid 1px;
+        color: #444;
+        background: burlywood; /*超链接背景颜色*/
+        border-color: #fff #aaa #aaa #fff;
+        zoom: 1; /*解决IE浏览器无法显示问题*/
+    }
 
-		    .rg_left > p:last-child{
-		        color:#A6A6A6;
-		        font-size: 20px;
+    * {
+        margin: 0px;
+        padding: 0px;
+        box-sizing: border-box;
+    }
 
-		    }
+    .rg_layout {
+        width: 900px;
+        height: 500px;
+        border: 8px solid #EEEEEE;
+        background-color: white;
+        /*让div水平居中*/
+        margin: auto;
+    }
+
+    .rg_left {
+        /*border: 1px solid red;*/
+        float: left;
+        margin: 15px;
+    }
+
+    .rg_left > p:first-child {
+        color: #FFD026;
+        font-size: 20px;
+    }
+
+    .rg_left > p:last-child {
+        color: #A6A6A6;
+        font-size: 20px;
+
+    }
 
 
-		    .rg_center{
-		        float: left;
-		       /* border: 1px solid red;*/
+    .rg_center {
+        float: left;
+        /* border: 1px solid red;*/
 
-		    }
+    }
 
-		    .rg_right{
-		        /*border: 1px solid red;*/
-		        float: right;
-		        margin: 15px;
-		    }
+    .rg_right {
+        /*border: 1px solid red;*/
+        float: right;
+        margin: 15px;
+    }
 
-		    .rg_right > p:first-child{
-		        font-size: 15px;
+    .rg_right > p:first-child {
+        font-size: 15px;
 
-		    }
-		    .rg_right p a {
-		        color:pink;
-		    }
+    }
 
-		    .td_left{
-		        width: 100px;
-		        text-align: right;
-		        height: 45px;
-		    }
-		    .td_right{
-		        padding-left: 50px ;
-		    }
+    .rg_right p a {
+        color: pink;
+    }
 
-		    #username,#password,#email,#name,#tel,#birthday,#checkcode{
-		        width: 251px;
-		        height: 32px;
-		        border: 1px solid #A6A6A6 ;
-		        /*设置边框圆角*/
-		        border-radius: 5px;
-		        padding-left: 10px;
-		    }
-		    #checkcode{
-		        width: 110px;
-		    }
+    .td_left {
+        width: 100px;
+        text-align: right;
+        height: 45px;
+    }
 
-		    #img_check{
-		        height: 32px;
-		        vertical-align: middle;
-		    }
+    .td_right {
+        padding-left: 50px;
+    }
 
-		    #btn_sub{
-		        width: 150px;
-		        height: 40px;
-		        background-color: #FFD026;
-		        border: 1px solid #FFD026 ;
-		    }
+    #username, #password, #email, #name, #tel, #birthday, #checkcode {
+        width: 251px;
+        height: 32px;
+        border: 1px solid #A6A6A6;
+        /*设置边框圆角*/
+        border-radius: 5px;
+        padding-left: 10px;
+    }
+
+    #checkcode {
+        width: 110px;
+    }
+
+    #img_check {
+        height: 32px;
+        vertical-align: middle;
+    }
+
+    #btn_sub {
+        width: 150px;
+        height: 40px;
+        background-color: #FFD026;
+        border: 1px solid #FFD026;
+    }
 </style>
 </body>
 </html>
